--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,6 @@ name = "zero2prod"
 # that relies on tokio 1.x.x
 # There might be some turbulence - it's a beta after all!
 actix-web = "4.0.0-beta.4"
+
+[dev-dependencies]
+actix-rt = "2.1.0"
