--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ name = "zero2prod"
 actix-web = "4.0.0-beta.4"
 chrono = "0.4.15"
 config = "0.11.0"
+env_logger = "0.8.3"
 serde = { version = "1.0.125", features = ["derive"] }
 uuid = { version = "0.8.1", features = ["v4"] }
 
