--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ config = "0.11.0"
 env_logger = "0.8.3"
 log = "0.4.14"
 serde = { version = "1.0.125", features = ["derive"] }
+tracing = { version = "0.1", features = ["log"] }
 uuid = { version = "0.8.1", features = ["v4"] }
 
 [dependencies.sqlx]
