--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ env_logger = "0.8.3"
 log = "0.4.14"
 serde = { version = "1.0.125", features = ["derive"] }
 tracing = { version = "0.1", features = ["log"] }
+tracing-futures = "0.2.5"
 uuid = { version = "0.8.1", features = ["v4"] }
 
 [dependencies.sqlx]
