--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ log = "0.4.14"
 serde = { version = "1.0.125", features = ["derive"] }
 tracing = { version = "0.1", features = ["log"] }
 tracing-futures = "0.2.5"
+tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
 uuid = { version = "0.8.1", features = ["v4"] }
 
 [dependencies.sqlx]
