Add tracing-actix-web dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ chrono = "0.4.15"
 config = "0.11.0"
 serde = { version = "1.0.125", features = ["derive"] }
 tracing = { version = "0.1", features = ["log"] }
+tracing-actix-web = "0.3.0-beta.2"
 tracing-bunyan-formatter = "0.2.0"
 tracing-futures = "0.2.5"
 tracing-log = "0.1.2"
